added assumption para and refer

--- a/manuscript/Manuscript.tex
+++ b/manuscript/Manuscript.tex
@@ -185,9 +185,9 @@ Table~\ref{tab:re} shows the results of the multiple linear regression model fro
 
 The calculated R-squared value for the model produced in this paper was 0.6529. A R-squared value of 0.6529 indicates the proportion of the variance in the dependent variable that can be explained by the independent variables in a multiple linear regression model. In other terms, about 65.29\% of the variability in the observed data can be accounted for by the model. The remaining 34.71\% of the variance is unaccounted for and may be attributed to other factors not included in your model or to random variability.
 
-In comparison with the model produced in \href{https://www.kaggle.com/code/ashydv/housing-price-prediction-linear-regression/notebook}{Kaggle}, it is slightly better. The Kaggle model had a R-squared value of 0.5791. A R-squared value of 0.5791 suggests that approximately 57.91\% of the variance in the dependent variable can be explained by the independent variables in your regression model. The model that was produced in the paper has a better R-squared value of about 7.38\%. 
+In comparison with the model produced in \href{https://www.kaggle.com/code/ashydv/housing-price-prediction-linear-regression/notebook}{Kaggle}, it is slightly better. The Kaggle model had a R-squared value of 0.5791. A R-squared value of 0.5791 suggests that approximately 57.91\% of the variance in the dependent variable can be explained by the independent variables in your regression model. The model that was produced in the paper has a better R-squared value of about 7.38\%. This suggests that the regression model outlined in the paper provides a more robust and comprehensive explanation for the variability observed in the dependent variable, thereby enhancing its predictive accuracy and overall effectiveness.
 
-asgfsgdfsgjdfg\cite{CFA}
+With a regression model that seems better than the one produced in Kaggle, it is imperative to ensure the fulfillment of five fundamental assumptions to guarantee the reliability and validity of statistical inferences. Firstly, the assumption of linearity asserts that the relationship between the dependent and independent variables is adequately represented by a linear function. Homoskedasticity, the second assumption, demands that the variance of the model's residuals remains constant across all levels of the independent variables, emphasizing the importance of a consistent spread of errors. Independence of errors, the third assumption, underscores the necessity for the residuals to be uncorrelated and exhibit no discernible pattern, safeguarding against systematic errors or biases. Normality, the fourth assumption, involves verifying that the residuals follow a normal distribution, ensuring the validity of statistical tests and confidence intervals. The fifth assumption, independence of independent variables, calls for the absence of multicollinearity, emphasizing that predictor variables should not exhibit high correlation, which might lead to unstable coefficient estimates.\cite{CFA}
 
 \begin{figure}[h!]
     \caption{Linearity Check}
