--- a/manuscript/references.bib
+++ b/manuscript/references.bib
@@ -41,3 +41,18 @@
   issn = {1877-0428},
   doi = {https://doi.org/10.1016/j.sbspro.2013.12.027},
 }
+
+@article{Jacobsen2005,
+  author = {Jacobsen, Dag H. and Naug, Bjørn E.},
+  journal = {Economic Bulletin},
+  title = {What Drives House Prices?},
+  year = {2005},
+}
+
+@online{CFA,
+  author = {CFA Institute},
+  title = {Basics of Multiple Regression and Underlying Assumptions},
+  url = {https://www.cfainstitute.org/en/membership/professional-development/refresher-readings/multiple-regression},
+  note = {Accessed: 2023-12-03},
+  year = {2023}
+}
