added description for linearity

--- a/manuscript/Manuscript.tex
+++ b/manuscript/Manuscript.tex
@@ -194,6 +194,7 @@ With a regression model that seems better than the one produced in Kaggle, it is
     \includegraphics[width=1\textwidth]{linearity_check.pdf}
     \label{fig:linearity_check}
 \end{figure}
+Figure~\ref{fig:linearity_check} shows a scatter plot of predicted values versus actual values. The predicted values are on the horizontal axis and the actual values are on the vertical axis. Each dot on the plot represents a single data point. The data points are tightly clustered around a straight line, which indicates a linear relationship between the two variables. The plot shows a strong positive correlation between the predicted and actual values, meaning that as the predicted values increase, the actual values also tend to increase. This linearity check indicates that the machine learning model is able to make somewhat accurate predictions.
 
 \begin{figure}[h!]
     \caption{Homoskedasticity Check}
