--- a/manuscript/Manuscript.tex
+++ b/manuscript/Manuscript.tex
@@ -201,7 +201,7 @@ Figure~\ref{fig:linearity_check} shows a scatter plot of predicted values versus
     \includegraphics[width=1\textwidth]{homoskedasticity_check.pdf}
     \label{fig:homoskedasticity_check}
 \end{figure}
-Figure~\ref{fig:homoskedasticity_check} shows the relationship between the predicted values and the residuals. If the residuals are evenly spread out around the zero line, regardless of the predicted values, then homoskedasticity is present. In this plot, it shows a slight fanning out of the residuals as the predicted values increase. This suggests that the variance of the error term may be increasing with the predicted values, which would be a violation of the homoskedasticity assumption. The mean of the residuals is close to zero, the distribution is symmetrical around the mean, and the residuals are evenly spread out around the mean. This suggests that the regression model is well-specified and that the assumptions of normality are met. Overall, the residuals distribution plot in the image you provided is a good sign. It suggests that the regression model can make accurate predictions.
+Figure~\ref{fig:homoskedasticity_check} shows the relationship between the predicted values and the residuals. If the residuals are evenly spread out around the zero line, regardless of the predicted values, then homoskedasticity is present. In this plot, it shows a slight fanning out of the residuals as the predicted values increase. This suggests that the variance of the error term may be increasing with the predicted values, which would be a violation of the homoskedasticity assumption. 
 
 \bigskip
 \bigskip
@@ -213,7 +213,9 @@ Figure~\ref{fig:homoskedasticity_check} shows the relationship between the predi
     \includegraphics[width=1\textwidth]{residuals_distribution.pdf}
     \label{fig:residuals_distribution}
 \end{figure}
-Figure~\ref{fig:residuals_distribution} shows the distribution of residuals in the model. 
+Figure~\ref{fig:residuals_distribution} shows the distribution of residuals in the model. The mean of the residuals is close to zero, the distribution is symmetrical around the mean, and the residuals are evenly spread out around the mean. This suggests that the regression model is well-specified and that the assumptions of normality are met. Overall, the residuals distribution plot in the image you provided is a good sign. It suggests that the regression model can make accurate predictions.
+
+
 
 \section{Discussion and Conclusion}
 \label{sec:disc}
