--- a/manuscript/Manuscript.tex
+++ b/manuscript/Manuscript.tex
@@ -282,8 +282,7 @@ By systematically gathering data from distinct communities, each characterized b
 % Styles are controlled by bib style (.bst file).
 
 
-\medskip
-
+\clearpage
 \printbibliography[title={References}]
 
 
